@@ -2,7 +2,7 @@ package com.meterware.servletunit;
 /********************************************************************************************************************
 * $Id$
 *
-* Copyright (c) 2000, Russell Gold
+* Copyright (c) 2000-2003, Russell Gold
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated 
 * documentation files (the "Software"), to deal in the Software without restriction, including without limitation 
@@ -30,9 +30,10 @@ class ServletUnitContext {
         this( null );
     }
 
-    ServletUnitContext(String contextPath) {
+    ServletUnitContext( String contextPath ) {
         _contextPath = (contextPath != null ? contextPath : "");
     }
+
 
 	Set getSessionIDs() {
 		return _sessions.keySet();
